ingress-rules.yaml
# Create the ingress resource
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
  - host: nginx.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
  - host: ghost.192.168.99.100.nip.io
    http:
      paths:
      - backend:
          serviceName: ghost
          servicePort: 2368
